# Agriculture-Irrigation-optimisation

./: .env  .gitignore  Dockerfile  Env.py  Hugging Face – The AI community building the future..html  Openenv.yaml  README.md  app.py  env.py  final_check.py  grader.py  inference.py  pyproject.toml  requirements.txt  test_local.py  test_model.py  test_phase2.py  test_phase2_fixed.py  train.py
server/: app.py
