[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irrigation-ai"
version = "0.1.0"
description = "AI-powered irrigation optimization using PPO"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gymnasium",
    "stable-baselines3",
    "pandas",
    "torch",
    "fastapi",
    "uvicorn",
]

[project.scripts]
irrigation-api = "inference:main"