[project]
name = "agriculture-irrigation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gymnasium", 
    "stable-baselines3",
    "pandas",
    "torch",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "inference:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"